--- a/components/readme.adoc
+++ b/components/readme.adoc
@@ -636,7 +636,7 @@ Number of Components: 285 in 196 JAR artifacts (19 deprecated)
 `pdf:operation` | 2.16 | The pdf components provides the ability to create modify or extract content from PDF documents.
 
 | link:camel-pgevent/src/main/docs/pgevent-component.adoc[PostgresSQL Event] (camel-pgevent) +
-`pgevent:host:port/database/channel` | 2.15 | The pgevent component allows for producing/consuming PostgreSQL events related to the LISTEN/NOTIFY commands.
+`pgevent:host:port/database/channel` | 2.15 | The pgevent component allows for producing/consuming PostgreSQL events related to the listen/notify commands.
 
 | link:camel-printer/src/main/docs/lpr-component.adoc[Printer] (camel-printer) +
 `lpr:hostname:port/printername` | 2.1 | The printer component is used for sending messages to printers as print jobs.
