--- a/components/camel-kafka/src/main/docs/kafka-component.adoc
+++ b/components/camel-kafka/src/main/docs/kafka-component.adoc
@@ -8,8 +8,6 @@ http://kafka.apache.org/[Apache Kafka] message broker.
 Maven users will need to add the following dependency to their `pom.xml`
 for this component.
 
-From Camel 2.17 onwards Scala is no longer used, as we use the kafka java client.
-
 [source,xml]
 ------------------------------------------------------------
 <dependency>
@@ -21,7 +19,7 @@ From Camel 2.17 onwards Scala is no longer used, as we use the kafka java client
 ------------------------------------------------------------
 
 
-### URI format
+=== URI format
 
 [source,java]
 ---------------------------
@@ -30,7 +28,7 @@ kafka:topic[?options]
 ---------------------------
 
 
-### Options
+=== Options
 
 
 // component options: START
@@ -168,13 +166,13 @@ For more information about Producer/Consumer configuration:
 http://kafka.apache.org/documentation.html#newconsumerconfigs[http://kafka.apache.org/documentation.html#newconsumerconfigs]
 http://kafka.apache.org/documentation.html#producerconfigs[http://kafka.apache.org/documentation.html#producerconfigs]
 
-### Message headers
+=== Message headers
 
-#### Consumer headers
+==== Consumer headers
 
 The following headers are available when consuming messages from Kafka.
 [width="100%",cols="2m,2m,1m,5",options="header"]
-|=================================================================================================================================================================================================================
+|===
 | Header constant                          | Header value                      | Type    | Description
 | KafkaConstants.TOPIC                     | "kafka.TOPIC"                     | String  | The topic from where the message originated
 | KafkaConstants.PARTITION                 | "kafka.PARTITION"                 | Integer | The partition where the message was stored
@@ -182,48 +180,50 @@ The following headers are available when consuming messages from Kafka.
 | KafkaConstants.KEY                       | "kafka.KEY"                       | Object  | The key of the message if configured
 | KafkaConstants.HEADERS                   | "kafka.HEADERS"                   | org.apache.kafka.common.header.Headers  | The record headers
 | KafkaConstants.LAST_RECORD_BEFORE_COMMIT | "kafka.LAST_RECORD_BEFORE_COMMIT" | Boolean | Whether or not it's the last record before commit (only available if `autoCommitEnable` endpoint parameter is `false`)
-|=================================================================================================================================================================================================================
+| KafkaConstants.MANUAL_COMMIT             | "CamelKafkaManualCommit"          | KafkaManualCommit | Can be used for forcing manual offset commit when using Kafka consumer. |
+|===
 
-#### Producer headers
+==== Producer headers
 
 Before sending a message to Kafka you can configure the following headers.
 [width="100%",cols="2m,2m,1m,5",options="header"]
-|============================================================================================================================================================================
+|===
 | Header constant              | Header value          | Type    | Description
 | KafkaConstants.KEY           | "kafka.KEY"           | Object  | *Required* The key of the message in order to ensure that all related message goes in the same partition
 | KafkaConstants.TOPIC         | "kafka.TOPIC"         | String  | The topic to which send the message (only read if the `bridgeEndpoint` endpoint parameter is `true`)
 | KafkaConstants.PARTITION_KEY | "kafka.PARTITION_KEY" | Integer | Explicitly specify the partition (only used if the `KafkaConstants.KEY` header is defined)
-|============================================================================================================================================================================
+|===
 
 After the message is sent to Kafka, the following headers are available
 [width="100%",cols="2m,2m,1m,5",options="header"]
-|==============================================================================================================================================================================================
+|===
 | Header constant                 | Header value                                       | Type                 | Description
 | KafkaConstants.KAFKA_RECORDMETA | "org.apache.kafka.clients.producer.RecordMetadata" | List<RecordMetadata> | The metadata (only configured if `recordMetadata` endpoint parameter is `true`
-|==============================================================================================================================================================================================
+|===
 
 
-### Samples
+=== Samples
 
-#### Consuming messages from Kafka
+==== Consuming messages from Kafka
 
 Here is the minimal route you need in order to read messages from Kafka.
 [source,java]
--------------------------------------------------------------
+----
 from("kafka:test?brokers=localhost:9092")
     .log("Message received from Kafka : ${body}")
     .log("    on the topic ${headers[kafka.TOPIC]}")
     .log("    on the partition ${headers[kafka.PARTITION]}")
     .log("    with the offset ${headers[kafka.OFFSET]}")
     .log("    with the key ${headers[kafka.KEY]}")
--------------------------------------------------------------
+----
 
 When consuming messages from Kafka you can use your own offset management and not delegate this management to Kafka.
 In order to keep the offsets the component needs a `StateRepository` implementation such as `FileStateRepository`.
 This bean should be available in the registry.
 Here how to use it :
+
 [source,java]
-----------------------------------------------------------------------------------------------------------------------------
+----
 // Create the repository in which the Kafka offsets will be persisted
 FileStateRepository repository = FileStateRepository.fileStateRepository(new File("/path/to/repo.dat"));
 
@@ -243,39 +243,41 @@ camelContext.addRoutes(new RouteBuilder() {
                 .to("mock:result");
     }
 });
-----------------------------------------------------------------------------------------------------------------------------
+----
  
 
-#### Producing messages to Kafka
+==== Producing messages to Kafka
 
 Here is the minimal route you need in order to write messages to Kafka.
+
 [source,java]
-----------------------------------------------------------------------------
+----
 from("direct:start")
     .setBody(constant("Message from Camel"))          // Message to send
     .setHeader(KafkaConstants.KEY, constant("Camel")) // Key of the message
     .to("kafka:test?brokers=localhost:9092");
-----------------------------------------------------------------------------
+----
 
-
-#### SSL configuration
+=== SSL configuration
 
 You have 2 different ways to configure the SSL communication on the Kafka` component.
 
 The first way is through the many SSL endpoint parameters
+
 [source,java]
--------------------------------------------------------------
+----
 from("kafka:" + TOPIC + "?brokers=localhost:{{kafkaPort}}" +
              "&groupId=A" +
              "&sslKeystoreLocation=/path/to/keystore.jks" +
              "&sslKeystorePassword=changeit" +
              "&sslKeyPassword=changeit")
         .to("mock:result");
--------------------------------------------------------------
+----
 
 The second way is to use the `sslContextParameters` endpoint parameter.
+
 [source,java]
---------------------------------------------------------------------------------------------------
+----
 // Configure the SSLContextParameters object
 KeyStoreParameters ksp = new KeyStoreParameters();
 ksp.setResource("/path/to/keystore.jks");
@@ -301,9 +303,10 @@ camelContext.addRoutes(new RouteBuilder() {
                 .to("mock:result");
     }
 });
---------------------------------------------------------------------------------------------------
+----
 
-### Using the Kafka idempotent repository (Available from Camel 2.19)
+=== Using the Kafka idempotent repository
+*Available from Camel 2.19*
 
 The `camel-kafka` library provides a Kafka topic-based idempotent repository. This repository stores broadcasts all changes to idempotent state (add/remove) in a Kafka topic, and populates a local in-memory cache for each repository's process instance through event sourcing.
 
@@ -315,7 +318,7 @@ On startup, the instance subscribes to the topic and rewinds the offset to the b
 
 A `KafkaIdempotentRepository` has the following properties:
 [width="100%",cols="2m,5",options="header"]
-|=======================================================================
+|===
 | Property | Description
 | topic | The name of the Kafka topic to use to broadcast changes. (required)
 | bootstrapServers | The `bootstrap.servers` property on the internal Kafka producer and consumer. Use this as shorthand if not setting `consumerConfig` and `producerConfig`. If used, this component will apply sensible default configurations for the producer and consumer.
@@ -324,7 +327,7 @@ A `KafkaIdempotentRepository` has the following properties:
 | maxCacheSize | How many of the most recently used keys should be stored in memory (default 1000).
 | pollDurationMs | The poll duration of the Kafka consumer. The local caches are updated immediately. This value will affect how far behind other peers that update their caches from the topic are relative to the idempotent consumer instance that sent the cache action message. The default value of this is 100 ms. +
 If setting this value explicitly, be aware that there is a tradeoff between the remote cache liveness and the volume of network traffic between this repository's consumer and the Kafka brokers. The cache warmup process also depends on there being one poll that fetches nothing - this indicates that the stream has been consumed up to the current point. If the poll duration is excessively long for the rate at which messages are sent on the topic, there exists a possibility that the cache cannot be warmed up and will operate in an inconsistent state relative to its peers until it catches up.
-|=======================================================================
+|===
 
 The repository can be instantiated by defining the `topic` and `bootstrapServers`, or the `producerConfig` and `consumerConfig` property sets can be explicitly defined to enable features such as SSL/SASL.
 
@@ -333,25 +336,24 @@ To use, this repository must be placed in the Camel registry, either manually or
 Sample usage is as follows:
 
 [source,java]
--------------------------------------------------------------
+----
 KafkaIdempotentRepository kafkaIdempotentRepository = new KafkaIdempotentRepository("idempotent-db-inserts", "localhost:9091");
 
 SimpleRegistry registry = new SimpleRegistry();
 registry.put("insertDbIdemRepo", kafkaIdempotentRepository); // must be registered in the registry, to enable access to the CamelContext
 CamelContext context = new CamelContext(registry);
 
-
 // later in RouteBuilder...
 from("direct:performInsert")
     .idempotentConsumer(header("id")).messageIdRepositoryRef("insertDbIdemRepo")
         // once-only insert into database
     .end()
--------------------------------------------------------------
+----
 
 In XML:
 
 [source,xml]
--------------------------------------------------------------
+----
 <!-- simple -->
 <bean id="insertDbIdemRepo" class="org.apache.camel.processor.idempotent.kafka.KafkaIdempotentRepository">
   <property name="topic" value="idempotent-db-inserts"/>
@@ -373,40 +375,21 @@ In XML:
     </props>
   </property>
 </bean>
--------------------------------------------------------------
+----
 
+=== Using manual commit with Kafka consumer
+*Available as of Camel 2.21*
 
-### Endpoints
+By default the Kafka consumer will use auto commit, where the offset will be committed automaticcally in the background using a given interval.
 
-Camel supports the link:message-endpoint.html[Message Endpoint] pattern
-using the
-http://camel.apache.org/maven/current/camel-core/apidocs/org/apache/camel/Endpoint.html[Endpoint]
-interface. Endpoints are usually created by a
-link:component.html[Component] and Endpoints are usually referred to in
-the link:dsl.html[DSL] via their link:uris.html[URIs].
+In case you want to force manual commits, you can use `KafkaManualCommit` API from the Camel Exchange, stored on the message header.
 
-From an Endpoint you can use the following methods
+[source,java]
+----
+public void process(Exchange exchange) {
+    KafkaManualCommit manual = exchange.getIn().getHeader(KafkaConstants.MANUAL_COMMIT, KafkaManualCommit.class);
+    manual.commitSync();
+}
+----
 
-* http://camel.apache.org/maven/current/camel-core/apidocs/org/apache/camel/Endpoint.html#createProducer()[createProducer()]
-will create a
-http://camel.apache.org/maven/current/camel-core/apidocs/org/apache/camel/Producer.html[Producer]
-for sending message exchanges to the endpoint
-
-* http://camel.apache.org/maven/current/camel-core/apidocs/org/apache/camel/Endpoint.html#createConsumer(org.apache.camel.Processor)[createConsumer()]
-implements the link:event-driven-consumer.html[Event Driven Consumer]
-pattern for consuming message exchanges from the endpoint via a
-http://camel.apache.org/maven/current/camel-core/apidocs/org/apache/camel/Processor.html[Processor]
-when creating a
-http://camel.apache.org/maven/current/camel-core/apidocs/org/apache/camel/Consumer.html[Consumer]
-
-* http://camel.apache.org/maven/current/camel-core/apidocs/org/apache/camel/Endpoint.html#createPollingConsumer()[createPollingConsumer()]
-implements the link:polling-consumer.html[Polling Consumer] pattern for
-consuming message exchanges from the endpoint via a
-http://camel.apache.org/maven/current/camel-core/apidocs/org/apache/camel/PollingConsumer.html[PollingConsumer]
-
-### See Also
-
-* link:configuring-camel.html[Configuring Camel]
-* link:message-endpoint.html[Message Endpoint] pattern
-* link:uris.html[URIs]
-* link:writing-components.html[Writing Components]
+This will force a synchronous commit which will block until the commit is acknowledge on Kafka, or if it fails an exception is thrown.
